fix: fix || typo

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
 						</li>
 						<li>
 							संकट ते हनुमान छुड़ावै ।<br />
-							मन क्रम बचन ध्यान जो लावै २६ ॥
+							मन क्रम बचन ध्यान जो लावै ॥२६॥
 						</li>
 						<li>
 							सब पर राम तपस्वी राजा ।<br />
@@ -235,8 +235,8 @@
 					<ul class="doha">
 						<!-- List items for 'Doha' section -->
 						<li>
-							पवन तनय संकट हरन, मंगल मूरति रूप।<br />
-							रामलखन सीता सहित, हृदय बसहु सुर भूप॥
+							पवन तनय संकट हरन, मंगल मूरति रूप ।<br />
+							रामलखन सीता सहित, हृदय बसहु सुर भूप ॥
 						</li>
 					</ul>
 
