feat: add bg, thumbnail, new fonts

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,23 @@
 	<link rel="manifest" href="../public/manifest.json" />
 	<meta name="theme-color" content="#d24115" />
 
+	<!-- Facebook Meta Tags -->
+	<meta property="og:title" content="Hanuman Chalisa - Read, Recite, and Explore" />
+	<meta property="og:description"
+		content="Experience the spiritual power of Hanuman Chalisa. Read and recite this sacred hymn and explore its meaning, significance, and benefits." />
+	<meta property="og:image" content="../public/icons/thumbnail.png" />
+	<!-- Replace with the actual URL of your image -->
+	<meta property="og:url" content="/" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="Your Website Name" />
+	<meta property="article:author" content="Vijay Hardaha" />
+
+	<!-- Twitter Meta Tags (Optional) -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Hanuman Chalisa - Read, Recite, and Explore" />
+	<meta name="twitter:description"
+		content="Experience the spiritual power of Hanuman Chalisa. Read and recite this sacred hymn and explore its meaning, significance, and benefits." />
+	<meta name="twitter:image" content="../public/icons/thumbnail.png" />
 </head>
 
 <body>
@@ -42,10 +59,10 @@
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12">
 					<!-- Heading for 'Title' section -->
-					<h1 class="title">🛕 श्री हनुमान चालीसा 🛕</h1>
+					<h1 class="title">श्री हनुमान चालीसा</h1>
 
 					<!-- Heading for 'Doha' section -->
-					<h4 class="subheading">दोहा :</h4>
+					<h4 class="subheading">॥ दोहा ॥</h4>
 
 					<!-- Unordered list for 'Doha' section -->
 					<ul class="doha">
@@ -61,7 +78,7 @@
 					</ul>
 
 					<!-- Heading for 'Chaupai' section -->
-					<h4 class="subheading">चौपाई :</h4>
+					<h4 class="subheading">॥ चौपाई ॥</h4>
 
 					<!-- Unordered list for 'Chaupai' section -->
 					<ul>
@@ -229,7 +246,7 @@
 					</ul>
 
 					<!-- Heading for 'Doha' section -->
-					<h4 class="subheading">दोहा :</h4>
+					<h4 class="subheading">॥ दोहा ॥</h4>
 
 					<!-- Unordered list for 'Doha' section -->
 					<ul class="doha">
