refactor(stylesheet): add scss dir in styles.scss path

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 	<meta name="robots" content="index, follow" />
 
 	<!-- Include your custom stylesheet -->
-	<link rel="stylesheet" href="./style.scss" />
+	<link rel="stylesheet" href="./scss/style.scss" />
 
 	<!-- Include icons meta -->
 	<link rel="apple-touch-icon" sizes="60x60" href="../public/icons/apple-icon-60x60.png" />
