--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
         <!-- Main content starts here -->
         <header class="mb-14">
             <h1 class="text-4xl md:text-5xl font-bold text-primary-600">श्री हनुमान चालीसा</h1>
-            <p class="text-lg text-zinc-600 mt-2">भक्ति, शक्ति और श्रद्धा का संगम – यहाँ पढ़ें और अनुभव करें श्री हनुमान चालीसा की हर चौपाई का गूढ़ अर्थ और आध्यात्मिक महत्व।</p>
+            <p class="text-lg text-zinc-600 mt-2">भक्ति, शक्ति और श्रद्धा का संगम – यहाँ पढ़ें और अनुभव करें श्री हनुमान
+                चालीसा की हर चौपाई का गूढ़ अर्थ और आध्यात्मिक महत्व।</p>
 
         </header>
 
@@ -39,12 +40,11 @@
     </div>
     <!-- Main content ends here -->
 
-    <footer class="text-center text-sm py-6 bg-zinc-900 text-white">
-        <p>Webpage maintained by <a href="https://github.com/vijayhardaha/" class="text-primary-600 underline"
-                target="_blank" rel="noreferrer">Vijay Hardaha</a> &bull; <a
-                href="https://github.com/vijayhardaha/hanuman-chalisa.git" class="text-primary-600 underline"
-                target="_blank" rel="noreferrer">GitHub Source</a></p>
-        <p class="mt-2">&copy; 2023 Vijay Hardaha. All rights reserved.</p>
+    <footer class="font-sans text-center text-xs py-6 bg-zinc-900 text-white">
+        <p>You can find the page source code on this <a href="https://github.com/vijayhardaha/hanuman-chalisa.git"
+                class="text-primary-600 underline" target="_blank" rel="noreferrer">Github repository</a></p>
+        <p class="mt-2">Copyright &copy; 2023. All rights reserved by <a href="https://github.com/vijayhardaha/"
+                class="text-primary-600 underline" target="_blank" rel="noreferrer">Vijay Hardaha</a></p>
     </footer>
 
     <script type="module" src="./js/couplets.js"></script>
