--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,42 @@
     <meta name="author" content="Vijay Hardaha" />
     <meta name="robots" content="index, follow" />
 
+    <!-- Include icons meta -->
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/icons/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/icons/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png" />
+    <link rel="icon" href="./assets/icons/favicon.ico" />
+    <link rel="manifest" href="./assets/manifest.json" />
+    <meta name="theme-color" content="#d24115" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:title" content="Hanuman Chalisa - Read, Recite, and Explore" />
+    <meta property="og:description"
+        content="Experience the spiritual power of Hanuman Chalisa. Read and recite this sacred hymn and explore its meaning, significance, and benefits." />
+    <meta property="og:image" content="./assets/icons/thumbnail.png" />
+    <!-- Replace with the actual URL of your image -->
+    <meta property="og:url" content="/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Your Website Name" />
+    <meta property="article:author" content="Vijay Hardaha" />
+
+    <!-- Twitter Meta Tags (Optional) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Hanuman Chalisa - Read, Recite, and Explore" />
+    <meta name="twitter:description"
+        content="Experience the spiritual power of Hanuman Chalisa. Read and recite this sacred hymn and explore its meaning, significance, and benefits." />
+    <meta name="twitter:image" content="./assets/icons/thumbnail.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <!-- Include Tailwind CSS -->
-    <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -40,11 +74,13 @@
     </div>
     <!-- Main content ends here -->
 
-    <footer class="font-sans text-center text-xs py-6 bg-zinc-900 text-white">
-        <p>You can find the page source code on this <a href="https://github.com/vijayhardaha/hanuman-chalisa.git"
-                class="text-primary-600 underline" target="_blank" rel="noreferrer">Github repository</a></p>
-        <p class="mt-2">Copyright &copy; 2023. All rights reserved by <a href="https://github.com/vijayhardaha/"
-                class="text-primary-600 underline" target="_blank" rel="noreferrer">Vijay Hardaha</a></p>
+    <footer class="font-sans text-xs py-6 bg-zinc-900 text-white">
+        <div class="max-w-4xl mx-auto px-4">
+            <p>You can find the page source code on this <a href="https://github.com/vijayhardaha/hanuman-chalisa.git"
+                    class="text-primary-600 hover:underline" target="_blank" rel="noreferrer">Github Repository</a></p>
+            <p class="mt-2">Copyright &copy; 2023. All rights reserved by <a href="https://github.com/vijayhardaha/"
+                    class="text-primary-600 hover:underline" target="_blank" rel="noreferrer">Vijay Hardaha</a></p>
+        </div>
     </footer>
 
     <script type="module" src="./js/couplets.js"></script>
