chore(fonts): remove unused Eczar font files and associated CSS

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 </head>
 
 <body class="font-serif font-medium relative bg-primary-50 text-zinc-800">
-    <div class="py-6 max-w-4xl mx-auto px-4">
+    <div class="py-6 max-w-4xl mx-auto px-6">
         <!-- Main content starts here -->
         <header class="mb-14">
             <h1 class="text-4xl md:text-5xl font-bold text-primary-600">श्री हनुमान चालीसा</h1>
@@ -74,8 +74,8 @@
     </div>
     <!-- Main content ends here -->
 
-    <footer class="font-sans text-xs py-6 bg-zinc-900 text-white">
-        <div class="max-w-4xl mx-auto px-4">
+    <footer class="font-sans text-sm py-4 bg-zinc-900 text-white">
+        <div class="max-w-4xl mx-auto px-6">
             <p>You can find the page source code on this <a href="https://github.com/vijayhardaha/hanuman-chalisa.git"
                     class="text-primary-600 hover:underline" target="_blank" rel="noreferrer">Github Repository</a></p>
             <p class="mt-2">Copyright &copy; 2023. All rights reserved by <a href="https://github.com/vijayhardaha/"
