refactor(styles): simplify body class in HTML and CSS for cleaner structure

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
-<body class="font-serif font-medium relative bg-primary-50 text-zinc-800">
+<body>
     <div class="py-6 max-w-4xl mx-auto px-6">
         <!-- Main content starts here -->
         <header class="mb-14">
