fix(styles): update font usage and adjust spacing for improved layout consistency

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
     <!-- Include Tailwind CSS -->
@@ -59,13 +59,13 @@
 </head>
 
 <body>
-    <div class="py-6 max-w-4xl mx-auto px-6">
+    <div class="py-6 max-w-4xl mx-auto px-4">
         <!-- Main content starts here -->
-        <header class="mb-14">
+        <header class="mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-primary-600">श्री हनुमान चालीसा</h1>
             <p class="text-lg text-zinc-600 mt-2">भक्ति, शक्ति और श्रद्धा का संगम – यहाँ पढ़ें और अनुभव करें श्री हनुमान
                 चालीसा की हर चौपाई का गूढ़ अर्थ और आध्यात्मिक महत्व।</p>
-
+        </header>
         </header>
 
         <main id="dynamic-content">
@@ -75,7 +75,7 @@
     <!-- Main content ends here -->
 
     <footer class="font-sans text-sm py-4 bg-zinc-900 text-white">
-        <div class="max-w-4xl mx-auto px-6">
+        <div class="max-w-4xl mx-auto px-4">
             <p>You can find the page source code on this <a href="https://github.com/vijayhardaha/hanuman-chalisa.git"
                     class="text-primary-600 hover:underline" target="_blank" rel="noreferrer">Github Repository</a></p>
             <p class="mt-2">Copyright &copy; 2023. All rights reserved by <a href="https://github.com/vijayhardaha/"
