fix(footer): correct wording in footer source code link

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
     <footer class="font-sans text-sm py-4 bg-zinc-900 text-white">
         <div class="max-w-4xl mx-auto px-4">
-            <p>You can find the page source code on this <a href="https://github.com/vijayhardaha/hanuman-chalisa.git"
+            <p>You can find the page's source code on this <a href="https://github.com/vijayhardaha/hanuman-chalisa.git"
                     class="text-primary-600 hover:underline" target="_blank" rel="noreferrer">Github Repository</a></p>
             <p class="mt-2">Copyright &copy; 2023. All rights reserved by <a href="https://github.com/vijayhardaha/"
                     class="text-primary-600 hover:underline" target="_blank" rel="noreferrer">Vijay Hardaha</a></p>
